--- a/parallax-main/index.html
+++ b/parallax-main/index.html
@@ -3,52 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Roaring Twenties</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="./images" />
+    <title>Mock Website</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <section>
-      <nav>
-        <h4>Linzer's Gallery</h4>
-        <a class="button">Sign Up</a>
-      </nav>
-      <!-- background img and "explore" title-->
+    <!-- Navbar -->
+    <div class="navbar">
       <div class="container">
-        <h2 class="main-title">Explore.</h2>
-        <img src="./images/bg2.png" class="bg2" />
+        <h1 class="logo">MockWeb</h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="docs.html">Docs</a></li>
+          </ul>
+        </nav>
       </div>
-      <!-- information -->
-      <div>
-        <!-- container-->
-        <div class="content">
-          <!--image container -->
-          <div class="content-images">
-            <!--image speakeasy -->
-            <div>
-              <img src="./images/speakeasy.png" />
-              <h4>Speakeasies</h4>
-              <h3>blah blah blah</h3>
-            </div>
-            <!-- image flappers-->
-            <div>
-              <img src="./images/flappers.png" />
-              <h4>Flappers</h4>
-              <h3>blah blah blah</h3>
-            </div>
-            <div>
-              <img src="./images/jazz.png" />
-              <h4>Jazz Age</h4>
-              <h3>blah blah blah</h3>
-            </div>
-          </div>
-          <p class="text">paragraph</p>
-        </div>
-      </div>
-    </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js"></script>
-    <script src="./script.js"></script>
+    </div>
   </body>
 </html>
