--- a/parallax-main/index.html
+++ b/parallax-main/index.html
@@ -16,7 +16,8 @@
   <body>
     <!-- Navbar -->
     <div class="navbar">
-      <div class="container">
+      <!-- contains logo and home, features, and docs -->
+      <div class="container flex">
         <h1 class="logo">MockWeb</h1>
         <nav>
           <ul>
@@ -27,5 +28,43 @@
         </nav>
       </div>
     </div>
+
+    <!-- Showcase -->
+    <section class="showcase">
+      <div class="container grid">
+        <div class="showcase-text">
+          <h1>Easier Deployment</h1>
+          <p>
+            MockWeb is a simple, intuitive, and intuitive way to deploy your
+            website.
+          </p>
+          <a href="features.html" class="btn btn-outline">Get Started</a>
+        </div>
+        <!-- mostly user input :D -->
+        <div class="showcase-form card">
+          <h2>Request a Demo</h2>
+          <form>
+            <!-- Name input -->
+            <div class="form-control">
+              <input type="text" name="name" placeholder="Name" required />
+            </div>
+            <!-- company input -->
+            <div class="form-control">
+              <input
+                type="text"
+                name="company"
+                placeholder="Company Name"
+                required
+              />
+            </div>
+            <!-- email input -->
+            <div class="form-control">
+              <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <input type="submit" value="Send" class="btn btn-primary" />
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
