--- a/parallax-main/index.html
+++ b/parallax-main/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mock Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="utilities.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -66,5 +67,35 @@
         </div>
       </div>
     </section>
+
+    <!-- Stats -->
+    <div class="section stats">
+      <div class="container">
+        <h3 class="stats-heading text-center my-1">
+          Blah blah blah blah blah blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah
+        </h3>
+
+        <div class="grid grid-3 text-center my-4">
+          <div>
+            <i class="fas fa-server fa-3x"></i>
+              <h3>10,349,405</h3>
+              <p class="text-secondary">Deployment</p>
+          </div>
+          <div>
+            <i class="fas fa-upload fa-3x"></i>
+              <h3>987 TB</h3>
+              <p class="text-secondary">Published</p>
+          </div>
+          <div>
+            <i class="fas fa-project-diagram fa-3x">
+              <h3>2,343,265</h3>
+              <p class="text-secondary">Projects</p>
+            </i>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
