--- a/parallax-main/index.html
+++ b/parallax-main/index.html
@@ -69,7 +69,7 @@
     </section>
 
     <!-- Stats -->
-    <div class="section stats">
+    <section class="stats">
       <div class="container">
         <h3 class="stats-heading text-center my-1">
           Blah blah blah blah blah blah blah blah blah blah blah blah blah blah
@@ -89,13 +89,12 @@
               <p class="text-secondary">Published</p>
           </div>
           <div>
-            <i class="fas fa-project-diagram fa-3x">
+            <i class="fas fa-project-diagram fa-3x"> </i>
               <h3>2,343,265</h3>
-              <p class="text-secondary">Projects</p>
-            </i>
-          </div>
+              <p class="text-secondary">Projects</p>     
+          </div>   
         </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
