--- a/parallax-main/index.html
+++ b/parallax-main/index.html
@@ -72,9 +72,7 @@
     <section class="stats">
       <div class="container">
         <h3 class="stats-heading text-center my-1">
-          Blah blah blah blah blah blah blah blah blah blah blah blah blah blah
-          blah blah blah blah blah blah blah blah blah blah blah blah blah blah
-          blah blah blah blah blah blah
+          When I wrote this code, only God and I understood what I did. Now only God knows
         </h3>
 
         <div class="grid grid-3 text-center my-4">
@@ -96,5 +94,95 @@
         </div>
       </div>
     </section>
+
+    <!-- Cli -->
+    <section class="cli">
+      <div class="container grid">
+        <img src="images/cli.png">
+        <div class="card">
+            <h3> Easy to use</h3>
+        </div>
+        <div class="card">
+            <h3> Depoly in Seconds</h3>
+        </div>
+      </div>
+    </section>
+
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+      <div class="container grid">
+        <div class="text-center">
+          <h2 class="md">Extreme Cloud Hosting</h2>
+          <p class="lead my-1">CLoud Hosting etc.....</p>
+          <a href="features.html" class="btn btn-dark">Read More</a>
+        </div>
+        <img src="images/cloud.png">
+      </div>
+    </section>
+    
+    <!-- Languages -->
+    <section class="languages">
+        <h2 class="h2 md text-center my-2">
+          Supported Languages
+        <h2>
+        <div class="container flex">
+          <div class="card">
+            <h4>Node.js</h4>
+            <img src="images/logos/node.png">
+          </div>
+          <div class="card">
+            <h4>Node.js</h4>
+            <img src="images/logos/clojure.png">
+          </div>
+          <div class="card">
+            <h4>Node.js</h4>
+            <img src="images/logos/csharp.png">
+          </div>
+          <div class="card">
+            <h4>Node.js</h4>
+            <img src="images/logos/php.png">
+          </div>
+          <div class="card">
+            <h4>Node.js</h4>
+            <img src="images/logos/python.png">
+          </div>
+          <div class="card">
+            <h4>Node.js</h4>
+            <img src="images/logos/ruby.png">
+          </div>
+          <div class="card">
+            <h4>Node.js</h4>
+            <img src="images/logos/scala.png">
+          </div>
+          <div class="card">
+            <h4>Node.js</h4>
+            <img src="images/logos/go.png">
+          </div>
+
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer class="footer bg-dark py-5">
+      <div class="container grid grid-3">
+        <div>
+          <h1>Loruki</h1>
+          <p>Copyright &copy; 2020</p>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="docs.html">Docs</a></li>
+          </ul>
+        </nav>
+        <div class="social">
+          <a href="#"><i class="fab fa-github fa-2x></i>"></a>
+          <a href="#"><i class="fab fa-facebook fa-2x></i>"></a>
+          <a href="#"><i class="fab fa-instagram fa-2x></i>"></a>
+          <a href="#"><i class="fab fa-twitter fa-2x></i>"></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
