--- a/parallax-main/features.html
+++ b/parallax-main/features.html
@@ -19,7 +19,7 @@
     <div class="navbar">
       <!-- contains logo and home, features, and docs -->
       <div class="container flex">
-        <h1 class="logo">MockWeb</h1>
+        <h1 class="logo"><a href="index.html">MockWeb</a></h1>
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -44,44 +44,54 @@
         </div>
     </section>
 <!-- sub head -->
-<div class="section features-sub-head bg-light py-3">
+<section class="features-sub-head bg-light py-3">
     <div class="container grid">
         <div>
             <h1 class="md">platform</h1>
-            <p class="lead">
+            <p>
                 MockWeb is a simple, intuitive, and intuitive way to deploy your
                 website.
             </p>
         </div>
         <img src="images/server2.png">
     </div>
-    </div>
-</div>
+</section>
 
 <section class="features-main my-2">
-    <div class="container grid">
+    <div class="container grid grid-3">
         <div class="card flex">
-            <i class="fas fa-server fa-3x">
+            <i class="fas fa-server fa-3x"></i>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>
-            </i>
         </div>
         <div class="card flex">
-            <i class="fas fa-server fa-3x">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>
-            </i>
+            <i class="fas fa-network-wired fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>         
         </div>
         <div class="card flex">
-            <i class="fas fa-server fa-3x">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>
-            </i>
+            <i class="fas fa-laptop-code fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>    
         </div>
         <div class="card flex">
-            <i class="fas fa-server fa-3x">
+            <i class="fas fa-database fa-3x"></i>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>
-            </i>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-power-off fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                magnam.
+            </p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-upload fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                magnam.
+            </p>
         </div>
     </div>
 </section>
+
     <!-- footer -->
     <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
