--- a/parallax-main/docs.html
+++ b/parallax-main/docs.html
@@ -44,44 +44,7 @@
         </div>
     </section>
 <!-- sub head -->
-<div class="section docs-sub-head bg-light py-3">
-    <div class="container grid">
-        <div>
-            <h1 class="md">platform</h1>
-            <p class="lead">
-                MockWeb is a simple, intuitive, and intuitive way to deploy your
-                website.
-            </p>
-        </div>
-        <img src="images/server2.png">
-    </div>
-    </div>
-</div>
 
-<section class="features-main my-2">
-    <div class="container grid">
-        <div class="card flex">
-            <i class="fas fa-server fa-3x">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>
-            </i>
-        </div>
-        <div class="card flex">
-            <i class="fas fa-server fa-3x">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>
-            </i>
-        </div>
-        <div class="card flex">
-            <i class="fas fa-server fa-3x">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>
-            </i>
-        </div>
-        <div class="card flex">
-            <i class="fas fa-server fa-3x">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui, repellat praesentium, cum nostrum modi saepe fugiat, dolor maiores nisi minus nam non hic excepturi illo! Est perferendis laudantium velit.</p>
-            </i>
-        </div>
-    </div>
-</section>
 
 <!-- docs main -->
 <section class="docs-main my-4">
@@ -90,14 +53,51 @@
             <h3 class="my-2">Essentials</h3>
             <nav>
                 <ul>
-                    <li><a href="#">Introduction</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Install</a></li>
+                    <li><a class="text-primary" href="#">Introduction</a></li>
+                    <li><a href="#">About Loruki</a></li>
+                    <li><a href="#">Installation</a></li>
+                </ul>
+            </nav>
+
+            <h3 class="my-2">Deployment</h3>
+            <nav>
+                <ul>
+                    <li><a href="#">Setting up a container</a></li>
+                        <li><a href="#">Using the CLI</a></li>
+                        <li><a href="#">Managing resources</a></li>
+                        <li><a href="#">Upgrade & downgrade</a></li>
                 </ul>
             </nav>
         </div>
-    </div>
-</section>
+        <div class="card">
+            <h2>Introduction</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio illo facere perferendis laborum? Similique recusandae incidunt eos dolorum aliquam ipsam unde perspiciatis laudantium totam quam laborum velit, at maxime minus?</p>
+
+            <div class="alert alert-success">
+                <i class="fas fa-info"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, animi?
+            </div>
+
+             <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima totam magni eius vitae velit id, atque veritatis! At, vero porro.</p>
+                <a href="#" class="btn btn-primary">Install CLI</a>
+
+                <h3>Requirements</h3>
+                <ul>
+                    <li>Windows 10, Mac OSX, Linux</li>
+                    <li>Node.js v12 or higher</li>
+                </ul>
+
+                <h3>Install</h3>
+                <p>Mac (Homebrew)</p>
+                <pre><code>$ brew install loruki-cli</code></pre>
+                <p>NPM</p>
+                <pre><code>$ npm install loruki-cli</code></pre>
+                <p>Yarn</p>
+                <pre><code>$ yarn install loruki-cli</code></pre>
+
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
