update all img file paths

--- a/docs.html
+++ b/docs.html
@@ -40,7 +40,7 @@
                     website.
                 </p>
             </div>
-            <img src="images/docs.png">
+            <img src="./parallax-main/images/docs.png">
         </div>
     </section>
 <!-- sub head -->
