--- a/features.html
+++ b/features.html
@@ -40,7 +40,7 @@
                     website.
                 </p>
             </div>
-            <img src="images/server.png">
+            <img src="./parallax-main/images/server.png">
         </div>
     </section>
 <!-- sub head -->
@@ -53,7 +53,7 @@
                 website.
             </p>
         </div>
-        <img src="images/server2.png">
+        <img src="./parallax-main/images/server2.png">
     </div>
 </section>
 
