test img file path

--- a/index.html
+++ b/index.html
@@ -128,34 +128,34 @@
         <div class="container flex">
           <div class="card">
             <h4>Node.js</h4>
-            <img src="./parallax-main/images/logos/node.png">
+            <img src="/parallax-main/images/logos/node.png">
           </div>
           <div class="card">
-            <h4>Node.js</h4>
+            <h4>Clojure</h4>
             <img src="./parallax-main/images/logos/clojure.png">
           </div>
           <div class="card">
-            <h4>Node.js</h4>
+            <h4>C#</h4>
             <img src="./parallax-main/images/logos/csharp.png">
           </div>
           <div class="card">
-            <h4>Node.js</h4>
+            <h4>php</h4>
             <img src="./parallax-main/images/logos/php.png">
           </div>
           <div class="card">
-            <h4>Node.js</h4>
+            <h4>python</h4>
             <img src="./parallax-main/images/logos/python.png">
           </div>
           <div class="card">
-            <h4>Node.js</h4>
+            <h4>Ruby</h4>
             <img src="./parallax-main/images/logos/ruby.png">
           </div>
           <div class="card">
-            <h4>Node.js</h4>
+            <h4>Scala</h4>
             <img src="./parallax-main/images/logos/scala.png">
           </div>
           <div class="card">
-            <h4>Node.js</h4>
+            <h4>Go</h4>
             <img src="./parallax-main/images/logos/go.png">
           </div>
 
