--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="container flex">
           <div class="card">
             <h4>Node.js</h4>
-            <img src="./images/logos/node.png">
+            <img src="./images/logos/node.PNG">
           </div>
           <div class="card">
             <h4>Clojure</h4>
