--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
         <div class="container flex">
           <div class="card">
             <h4>Node.js</h4>
-            <img src="./images/logos/node.PNG">
+            <img src="images/logos/node.png">
           </div>
           <div class="card">
             <h4>Clojure</h4>
-            <img src="./images/logos/clojure.png">
+            <img src="./images/logos/clojure.PNG">
           </div>
           <div class="card">
             <h4>C#</h4>
