fix clojure png

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </div>
           <div class="card">
             <h4>Clojure</h4>
-            <img src="./images/logos/clojure.PNG">
+            <img src="./images/logos/clojure.png">
           </div>
           <div class="card">
             <h4>C#</h4>
