--- a/docs.html
+++ b/docs.html
@@ -89,11 +89,11 @@
 
                 <h3>Install</h3>
                 <p>Mac (Homebrew)</p>
-                <pre><code>$ brew install loruki-cli</code></pre>
+                <pre><code>$ brew install </code></pre>
                 <p>NPM</p>
-                <pre><code>$ npm install loruki-cli</code></pre>
+                <pre><code>$ npm install </code></pre>
                 <p>Yarn</p>
-                <pre><code>$ yarn install loruki-cli</code></pre>
+                <pre><code>$ yarn install </code></pre>
 
             </div>
         </div>
@@ -102,7 +102,7 @@
     <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
         <div>
-          <h1>Loruki</h1>
+          <h1>MockWeb</h1>
           <p>Copyright &copy; 2020</p>
         </div>
         <nav>
